Pagina Index e logo adcionadas

--- a/cadastro.html
+++ b/cadastro.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GOC</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/login.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
 </head>
 
 <body>
+
+
+
+
+
     <div class="container">
         <div class="row">
             <div class="col-md-10 offset=md-1">
@@ -20,7 +25,7 @@
                         <img src="img/icon-espada2.png" alt="">
                         <h3>GOC</h3>
                         <p>Junte-se a batalha pelo conhecimento, torne-se uma <strong>Lenda</strong> </p>
-                        <button type="button" class="btn btn-primary">Teste</button>
+                        <a href="index.html"> <button type="button" class="btn btn-primary">Inicio</button></a>
                         <p>Já é cadastrado? Faça o <a href="login.html">Login</a></p>
                     </div>
                     <div class="col-md-7 registrer-rigth">
